<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_2x"
    android:layout_gravity="center_horizontal"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/gray"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold" />
    
    
    <com.example.bframes_layout1.BubbleFrame
        android:id="@+id/surfaceView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="@color/black" />
    
    <LinearLayout
        android:id="@+id/buttonbar"
        android:layout_below="@+id/surfaceView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="4" >

        <Button
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/gray"
            android:paddingTop="5dp" 
            android:drawableTop="@drawable/pick_bubble"
            android:text="@string/pickbubble"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingTop="5dp" 
            android:background="@color/gray"
            android:drawableTop="@drawable/add_bubble"
            android:text="@string/addbubble"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/gray"
            android:drawableTop="@drawable/background_icon"
            android:text="@string/background"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:paddingTop="5dp" 
            android:textStyle="bold" />

        <Button
            android:id="@+id/export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/gray"
            android:paddingTop="5dp" 
            android:drawableTop="@drawable/export"
            android:text="@string/export"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />
    </LinearLayout>

     <com.google.ads.AdView
        android:layout_below="@+id/buttonbar"
        xmlns:googleads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/ad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        googleads:adSize="BANNER"
        googleads:adUnitId="a152b2d9faa2553"
        googleads:loadAdOnCreate="true"
        googleads:testDevices="EMULATOR,D544EEBE1EB5ECA094E93E7CF5D87BB0" />
   

</RelativeLayout>